--- a/CarStore/Views/Config/Details.cshtml
+++ b/CarStore/Views/Config/Details.cshtml
@@ -70,6 +70,42 @@
             {
                 <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-7-cfg-premium.png" alt="config q7 premium img" />
             }
+            @if (Model.Id == 15)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-logan-cfg-life.jpg" alt="config logan life img" />
+            }
+            @if (Model.Id == 16)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-logan-cfg-life-pl.jpg" alt="config logan life+ img" />
+            }
+            @if (Model.Id == 17)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-logan-cfg-zen.jpg" alt="config logan zen img" />
+            }
+            @if (Model.Id == 18)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-kadjar-cfg-life.jpg" alt="config kadjar life img" />
+            }
+            @if (Model.Id == 19)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-kadjar-cfg-zen.jpg" alt="config kadgar zen img" />
+            }
+            @if (Model.Id == 20)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-kadjar-cfg-intense.jpg" alt="config kadjar intense img" />
+            }
+            @if (Model.Id == 21)
+            {
+                <img class="img-cfg-det-renault-koleos" src="~/App_Images/renault-koleos-cfg-life.jpg" alt="config koleos life img" />
+            }
+            @if (Model.Id == 22)
+            {
+                <img class="img-cfg-det-renault-koleos" src="~/App_Images/renault-koleos-cfg-zen.jpg" alt="config koleos zen img" />
+            }
+            @if (Model.Id == 23)
+            {
+                <img class="img-cfg-det-renault-koleos" src="~/App_Images/renault-koleos-cfg-intense.jpg" alt="config koleos intense img" />
+            }
             <dl>
                 <dt>
                     @Html.DisplayNameFor(model => model.Name):
