--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -51,6 +51,18 @@
                         {
                             <img class="audi-small-icon" src="~/App_Images/audi-Q-7-small-icon.png" alt="Q7-small-icon" />
                         }
+                        @if (item.Id == 5)
+                        {
+                            <img class="renault-small-icon" src="~/App_Images/renault-kadjar-small-icon.jpg" alt="kadjar-small-icon" />
+                        }
+                        @if (item.Id == 6)
+                        {
+                            <img class="renault-small-icon" src="~/App_Images/renault-koleos-small-icon.jpg" alt="koleos-small-icon" />
+                        }
+                        @if (item.Id == 7)
+                        {
+                            <img class="renault-small-icon" src="~/App_Images/renault-logan-small-icon.jpg" alt="logan-small-icon" />
+                        }
                     </td>
                 </tr>
             }
