Added 4 new cars.

--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -137,7 +137,7 @@
     }
 
 
-    @*AUDI RS7*@
+    @*AUDI A7*@
     @*/////////////*@
 
     @if (Model.Id == 3)
@@ -146,7 +146,7 @@
             Start price from $56050
             <br />
             Crazy and unpretentious or independent and aesthetic?
-            For the Audi RS 7 Sportback, both are correct.
+            For the Audi A7, both are correct.
             Elegant coupe-like design lines combine with the brute force of the V-shaped 'Eight' TFSI.
             Innovative technology is combined with intuitive dynamics.
             Enjoy the thrill of having no compromise.
@@ -154,19 +154,19 @@
         </div>
 
         <br />
-        <img class="img-audi" src="~/App_Images/audi-RS-7-view-1.jpg" alt="RS7-view-1" />
+        <img class="img-audi-wide" src="~/App_Images/audi-A-7-view-1(2).jpg" alt="A7-view-1" />
 
         <div>
             <hr />
             <h2>Impressive at first glance</h2>
             <div class="div-text">
-                With its sporty roofline, the Audi RS 7 Sportback will be the center of attention in any environment.
+                With its sporty roofline, the Audi A7 will be the center of attention in any environment.
                 Wide "shoulders", clear "eyes", irresistible essence - the spectacular design looks quite convincing,
                 from which side you would not look at it. Characteristic of the RS versions, the wide posture,
                 LED strip and wide grille of the Singleframe radiator stand out as visual indications of outstanding dynamics.
             </div>
             <br>
-            <img class="img-audi" src="~/App_Images/audi-RS-7-view-2.jpg" alt="RS7-view-2" />
+            <img class="img-audi" src="~/App_Images/audi-A-7-view-2(2).jpg" alt="A7-view-2" />
         </div>
 
         <div>
@@ -174,9 +174,9 @@
             <h2>Interior design</h2>
 
             <div class="div-text">
-                The Audi RS7 Sportback lets you do this trick at any landing spot.
+                The Audi A7 lets you do this trick at any landing spot.
                 For example, with RS sports seats with Valcona perforated leather upholstery with red honeycomb pattern,
-                embossed RS logo on the backs, and red-edged seat belts,
+                embossed A logo on the backs, and red-edged seat belts,
                 also available for rear seat mounting.
                 The spacious lounge allows you to enjoy sports aesthetics with all your family or friends.
                 This allows you to speak against the routine of the whole company, which can number up to five people.
@@ -184,7 +184,7 @@
 
             </div>
             <br />
-            <img class="img-audi" src="~/App_Images/audi-RS-7-inside-1.jpg" alt="RS7-inside-1" />
+            <img class="img-audi" src="~/App_Images/audi-A-7-inside-1.jpeg" alt="A7-inside-1" />
         </div>
 
         <hr />
@@ -193,15 +193,15 @@
         <div class="div-cfg">
             <span class="span">1/3</span>
             <a href="/Config/Details/8">
-                <img class="audi-config-img" src="~/App_Images/audi-RS-7-cfg-base.png" alt="RS7-configs-base-img" />
+                <img class="audi-config-img" src="~/App_Images/audi-A-7-cfg-base.png" alt="A7-configs-base-img" />
             </a>
             <span class="span">2/3</span>
             <a href="/Config/Details/10">
-                <img class="audi-config-img" src="~/App_Images/audi-RS-7-cfg-comfort.png" alt="RS7-configs-comfort-img" />
+                <img class="audi-config-img" src="~/App_Images/audi-A-7-cfg-comfort.png" alt="A7-configs-comfort-img" />
             </a>
             <span class="span">3/3</span>
             <a href="/Config/Details/13">
-                <img class="audi-config-img" src="~/App_Images/audi-RS-7-cfg-premium.png" alt="RS7-configs-premium-img" />
+                <img class="audi-config-img" src="~/App_Images/audi-A-7-cfg-premium.png" alt="A7-configs-premium-img" />
             </a>
             <hr />
         </div>
@@ -397,7 +397,7 @@
         <div class="div-text">
             Start price from $11 460
             <br />
-            
+
         </div>
 
         <br>
@@ -410,7 +410,7 @@
             <hr />
 
             <div class="div-text">
-                
+
 
             </div>
 
@@ -436,6 +436,283 @@
             </a>
         </div>
         <hr />
+    }
+    @*AUDI A8*@
+    @*/////////////*@
+
+    @if (Model.Id == 8)
+    {
+        <div class="div-text">
+            Start price from $72 660
+            <br />
+            New Audi A8.
+            <br />
+            We have always promised to work ahead of the curve.
+            We have never fulfilled our promises so comprehensively,
+            as comprehensively as with the new Audi A8. It gives rise to a new design language,
+            a new management idea, a new level of quality.
+            The new Audi A8 represents the future of luxury cars.
+
+        </div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-A-8-view-1.jpg" alt="A8-view-1" />
+
+        <div>
+            <hr />
+            <h2>Visual contact with renewed vigor</h2>
+            <div class="div-text">
+                The noble exterior features combine exclusivity with a sporty
+                character and vividly evoke the uniqueness of the Audi A8,
+                while recalling the first quattro.
+
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-A-8-view-2.jpg" alt="A8-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                Thanks to the multicolour combination of contour and interior lighting,
+                precise light guides adorn the car interior.
+                Elements of interior design are emphasized, making it more expressive.
+            </div>
+            <br />
+            <img class="img-audi" src="~/App_Images/audi-A-8-inside-1.jpeg" alt="A8-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/25">
+                <img class="audi-config-img" src="~/App_Images/audi-A-8-cfg-base.png" alt="A8-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/26">
+                <img class="audi-config-img" src="~/App_Images/audi-A-8-cfg-comfort.png" alt="A8-configs-comfort-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/27">
+                <img class="audi-config-img" src="~/App_Images/audi-A-8-cfg-premium.png" alt="A8-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
+    }
+
+    @*AUDI A6*@
+    @*/////////////*@
+
+    @if (Model.Id == 9)
+    {
+        <div class="div-text">
+            Start price from $47 230
+            <br />
+            When design is combined with efficiency and sportiness is with style.
+            When innovation and completeness coexist, and progressive elegance is felt in every line.
+            When form and functionality become a challenge and priority is given to progress.
+            Then a new leader emerges in business class: the Audi A6 Limousine.
+            Even more athletic. Majestic, as always.
+        </div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-A-6-view-1.jpg" alt="A6-view-1" />
+
+        <div>
+            <hr />
+            <div class="div-text">
+                Audi Singleframe enlarged radiator grille,
+                chrome-style side air intakes,
+                narrow headlights - the front of the A6 Limousine impresses
+                with its progressiveness at first glance.
+                The clearly defined wings lines with powerful wheel arches
+                highlight the power of the all-wheel drive quattro.
+                Exterior mirrors on the door give the sedan a sporty look.
+                And the coupe-style roofline elegantly goes into the embossed back
+                with distinctive aluminum elements.
+
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-A-6-view-2.jpg" alt="A6-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                The light package for illumination of the contours
+                of the interior elements (optional) captivates
+                the look and creates a unique atmosphere of comfort in the A6 Limousine.
+                Ideal fiber optic lines emphasize the perfection of the instrument panel,
+                center console, and other expressive design elements,
+                highlighting them (30 backlight colors available) and adjusting the light brightness as needed.
+            </div>
+            <br />
+            <img class="img-audi-wide" src="~/App_Images/audi-A-6-inside-1.jpeg" alt="A6-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/28">
+                <img class="audi-config-img" src="~/App_Images/audi-A-6-cfg-base.png" alt="A6-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/29">
+                <img class="audi-config-img" src="~/App_Images/audi-A-6-cfg-comfort.png" alt="A6-configs-comfort-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/30">
+                <img class="audi-config-img" src="~/App_Images/audi-A-6-cfg-premium.png" alt="A6-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
+    }
+
+    @*AUDI Q8*@
+    @*/////////////*@
+
+    @if (Model.Id == 10)
+    {
+<div class="div-text">
+    Start price from $71 320
+    <br />
+    Expressive design, cutting-edge technology and the arts to meet the highest demands -
+    the new Audi Q8 combines all the key features of the brand.
+    Its sporty exterior is clearly associated with the design of the first quattro,
+    and the new octagonal grille Singleframe clearly indicates the future.
+</div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-Q-8-view-1.jpg" alt="Q8-view-1" />
+
+        <div>
+            <hr />
+            <div class="div-text">
+                
+                The interior of the four-door SUV is reminiscent of a seating area: it is spacious,
+                luxurious and offers extensive communication facilities.
+                A variety of intelligent systems, ranging from MMI touch response to voice control,
+                and a high-tech navigation system, go straight to the digital age.
+                The chassis and the drive are complemented by their confident maneuverability,
+                and when needed - even off-paved roads.
+
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-Q-8-view-2.jpg" alt="Q8-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                Sit down and enjoy. 
+                Thanks to its width of two meters, 
+                the Audi Q8 in the role of the SUV provides an extraordinary sense of space. 
+                Restrained, noble design, custom contour seats with massage and ventilation features, 
+                a four-zone automatic air conditioning system and an air quality package emphasize 
+                the sophistication of the interior atmosphere.
+
+            </div>
+            <br />
+            <img class="img-audi" src="~/App_Images/audi-Q-8-inside-1.jpeg" alt="Q8-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/31">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-8-cfg-base.png" alt="Q8-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/32">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-8-cfg-comfort.png" alt="Q8-configs-comfort-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/33">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-8-cfg-premium.png" alt="Q8-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
+    }
+
+    @*AUDI Q5*@
+    @*/////////////*@
+
+    @if (Model.Id == 11)
+    {
+<div class="div-text">
+    Start price from $47 010
+    <br />
+    Don't rely on the case.
+    No matter whether it is comfort, style or dynamics, 
+    the new Audi Q5 will immediately convince you. His appearance is so expressive, 
+    his engine is so powerful, his technology is so new. 
+    And so many of its possibilities.
+    Every day is a new one with the new Audi Q5.
+</div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-Q-5-view-1.jpg" alt="Q5-view-1" />
+
+        <div>
+            <hr />
+            <div class="div-text">
+                Every detail of the Audi Q5 is created in a distinctive Q-design 
+                and embodies dynamics and independence. For example, 
+                a clear hood or a flat inclined roof line, 
+                located on the side line of the rearview mirror and a narrow glass line.
+
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-Q-5-view-2.jpg" alt="Q5-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                The interior of the new Audi Q5 is driver-oriented and,
+                thanks to its increased wheelbase, offers more space and individuality.
+                You can choose from many details, from high-quality materials such as optional 
+                Nappa leather in striking colors to lightening elements. In the dark,
+                the optional interior illumination accentuates with 30 different individually selected colors.
+                Even the decorative overlays on the dashboard are highlighted.
+
+            </div>
+            <br />
+            <img class="img-audi" src="~/App_Images/audi-Q-5-inside-1.jpeg" alt="Q5-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/35">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-5-cfg-base.png" alt="Q5-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/36">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-5-cfg-comfort.png" alt="Q5-configs-comfort-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/37">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-5-cfg-premium.png" alt="Q5-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
     }
 
 </body>        
