--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -45,7 +45,7 @@
                         }
                         @if (item.Id == 3)
                         {
-                            <img class="audi-small-icon" src="~/App_Images/audi-RS-7-small-icon.png" alt="RS7-small-icon" />
+                            <img class="audi-small-icon" src="~/App_Images/audi-A-7-small-icon.png" alt="A7-small-icon" />
                         }
                         @if (item.Id == 4)
                         {
@@ -62,6 +62,22 @@
                         @if (item.Id == 7)
                         {
                             <img class="renault-small-icon" src="~/App_Images/renault-logan-small-icon.jpg" alt="logan-small-icon" />
+                        }
+                        @if (item.Id == 8)
+                        {
+                            <img class="audi-small-icon" src="~/App_Images/audi-A-8-small-icon.png" alt="A8-small-icon" />
+                        }
+                        @if (item.Id == 9)
+                        {
+                            <img class="audi-small-icon" src="~/App_Images/audi-A-6-small-icon.png" alt="A6-small-icon" />
+                        }
+                        @if (item.Id == 10)
+                        {
+                            <img class="audi-small-icon" src="~/App_Images/audi-Q-8-small-icon.png" alt="Q8-small-icon" />
+                        }
+                        @if (item.Id == 11)
+                        {
+                            <img class="audi-small-icon" src="~/App_Images/audi-Q-5-small-icon.png" alt="Q5-small-icon" />
                         }
                     </td>
                 </tr>
