--- a/CarStore/Views/Config/Details.cshtml
+++ b/CarStore/Views/Config/Details.cshtml
@@ -48,7 +48,7 @@
             }
             @if (Model.Id == 8)
             {
-                <img class="img-cfg-det-audi" src="~/App_Images/audi-RS-7-cfg-base.png" alt="config rs7 base img" />
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-7-cfg-base.png" alt="config a7 base img" />
             }
             @if (Model.Id == 9)
             {
@@ -56,7 +56,7 @@
             }
             @if (Model.Id == 10)
             {
-                <img class="img-cfg-det-audi" src="~/App_Images/audi-RS-7-cfg-comfort.png" alt="config rs7 comfort img" />
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-7-cfg-comfort.png" alt="config a7 comfort img" />
             }
             @if (Model.Id == 12)
             {
@@ -64,7 +64,7 @@
             }
             @if (Model.Id == 13)
             {
-                <img class="img-cfg-det-audi" src="~/App_Images/audi-RS-7-cfg-premium.png" alt="config rs7 premium img" />
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-7-cfg-premium.png" alt="config a7 premium img" />
             }
             @if (Model.Id == 14)
             {
@@ -106,6 +106,55 @@
             {
                 <img class="img-cfg-det-renault-koleos" src="~/App_Images/renault-koleos-cfg-intense.jpg" alt="config koleos intense img" />
             }
+            @if (Model.Id == 25)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-8-cfg-base.png" alt="config a8 base img" />
+            }
+            @if (Model.Id == 26)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-8-cfg-comfort.png" alt="config a8 comfort img" />
+            }
+            @if (Model.Id == 27)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-8-cfg-premium.png" alt="config a8 premium img" />
+            }
+            @if (Model.Id == 28)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-6-cfg-base.png" alt="config a6 base img" />
+            }
+            @if (Model.Id == 29)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-6-cfg-comfort.png" alt="config a6 comfort img" />
+            }
+            @if (Model.Id == 30)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-6-cfg-premium.png" alt="config a6 premium img" />
+            }
+            @if (Model.Id == 31)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-8-cfg-base.png" alt="config q8 base img" />
+            }
+            @if (Model.Id == 32)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-8-cfg-comfort.png" alt="config q8 comfort img" />
+            }
+            @if (Model.Id == 33)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-8-cfg-premium.png" alt="config q8 premiumimg" />
+            }
+            @if (Model.Id == 35)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-5-cfg-base.png" alt="config q5 base img" />
+            }
+            @if (Model.Id == 36)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-5-cfg-comfort.png" alt="config q5 comfort img" />
+            }
+            @if (Model.Id == 37)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-5-cfg-premium.png" alt="config q5 premiumimg" />
+            }
+
             <dl>
                 <dt>
                     @Html.DisplayNameFor(model => model.Name):
